--- a/tensorflow_create models.ipynb
+++ b/tensorflow_create models.ipynb
@@ -849,7 +849,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m211/211\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 824ms/step - accuracy: 0.1099 - loss: 2.1976"
+      "\u001b[1m211/211\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m264s\u001b[0m 1s/step - accuracy: 0.1099 - loss: 2.1976 - val_accuracy: 0.1111 - val_loss: 2.1972\n",
+      "Epoch 2/1000\n",
+      "\u001b[1m211/211\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m138s\u001b[0m 656ms/step - accuracy: 0.1025 - loss: 2.1974 - val_accuracy: 0.1111 - val_loss: 2.1972\n",
+      "Epoch 3/1000\n",
+      "\u001b[1m211/211\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m138s\u001b[0m 656ms/step - accuracy: 0.1013 - loss: 2.1974 - val_accuracy: 0.1111 - val_loss: 2.1972\n",
+      "Epoch 4/1000\n",
+      "\u001b[1m211/211\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m138s\u001b[0m 656ms/step - accuracy: 0.1027 - loss: 2.1973 - val_accuracy: 0.1111 - val_loss: 2.1972\n",
+      "Epoch 5/1000\n",
+      "\u001b[1m211/211\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m138s\u001b[0m 656ms/step - accuracy: 0.1041 - loss: 2.1973 - val_accuracy: 0.1111 - val_loss: 2.1972\n",
+      "Epoch 6/1000\n",
+      "\u001b[1m211/211\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m138s\u001b[0m 656ms/step - accuracy: 0.1047 - loss: 2.1973 - val_accuracy: 0.1111 - val_loss: 2.1972\n",
+      "Epoch 7/1000\n",
+      "\u001b[1m211/211\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m138s\u001b[0m 655ms/step - accuracy: 0.1049 - loss: 2.1973 - val_accuracy: 0.1111 - val_loss: 2.1972\n",
+      "Epoch 8/1000\n",
+      "\u001b[1m168/211\u001b[0m \u001b[32m━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━\u001b[0m \u001b[1m26s\u001b[0m 608ms/step - accuracy: 0.1053 - loss: 2.1973"
      ]
     }
    ],
