--- a/tugas1/model.ipynb
+++ b/tugas1/model.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tugas 1 Kelompok 1 Algoritma Deep Learning\n",
+    "\n",
+    "4IA15\n",
+    "Anggota Kelompok:\n",
+    "1. A IAS Falah Surya Gemilang - 50421001\n",
+    "2. Aldo Rizky Ramadhan - 50421106\n",
+    "3. Faiz Rizki Azmi - 50421454\n",
+    "4. Muhamad Ibnu Khaidar Hafiz - 50421867\n",
+    "5. Siti Asma Tomu - 51421427"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Source Code yang asli bisa di cek di Github berikut:\n",
+    "[https://github.com/Cleign1/algoritma-deep-learning-gundar](https://github.com/Cleign1/algoritma-deep-learning-gundar)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
