--- a/tugas2/fashion_mnist.ipynb
+++ b/tugas2/fashion_mnist.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tugas 2 Kelompok 1 Algoritma Deep Learning\n",
+    "\n",
+    "4IA15\n",
+    "Anggota Kelompok:\n",
+    "1. A IAS Falah Surya Gemilang - 50421001\n",
+    "2. Aldo Rizky Ramadhan - 50421106\n",
+    "3. Faiz Rizki Azmi - 50421454\n",
+    "4. Muhamad Ibnu Khaidar Hafiz - 50421867\n",
+    "5. Siti Asma Tomu - 51421427\n",
+    "## Source Code yang asli bisa di cek di Github berikut:\n",
+    "[https://github.com/Cleign1/algoritma-deep-learning-gundar](https://github.com/Cleign1/algoritma-deep-learning-gundar)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Membuat Model Machine Learning yang menggunakan Computer Vision berupa Convolusional Neural Network (CNN) untuk mengenali gambar dan fiturnya"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
