tambah judul for tugas 4 2

--- a/tugas4/M8_sentiment_analysis.ipynb
+++ b/tugas4/M8_sentiment_analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a Sentiment Analysis Model using Tensorflow"
+    "# Creating a Sentiment Analysis Model using Tensorflow with RNN, LSTM, GRU"
    ]
   },
   {
@@ -12,12 +12,13 @@
    "metadata": {},
    "source": [
     "Kelompok 1 Algoritma Deep Learning\n",
-    "Anggota Kelompok :\n",
-    "1. A IAS Falah Surya Gemilang\n",
-    "2. Aldo Rizky Ramadhan\n",
-    "3. Faiz Rizki Azmi\n",
-    "4. Muhamad Ibnu Khaidar Hafiz\n",
-    "5. Siti Asma Tomu"
+    "4IA15\n",
+    "Anggota Kelompok:\n",
+    "1. A IAS Falah Surya Gemilang - 50421001\n",
+    "2. Aldo Rizky Ramadhan - 50421106\n",
+    "3. Faiz Rizki Azmi - 50421454\n",
+    "4. Muhamad Ibnu Khaidar Hafiz - 50421867\n",
+    "5. Siti Asma Tomu - 51421427"
    ]
   },
   {
